2007-05-21  Andy Buckley  <andy@insectnation.org>

	* Incremented version number to 0.3b2 - approaching 0.3 stable release.

	* Made number of curves per half loop scale with the maximum sampled 
	curvature of the underlying line.

	* Added draft mode, so that rapid turnaround of diagrams with complex 3D 
	constructions is possible without changing any code.

2007-05-17  Georg von Hippel <gmv22@cantab.net>

	* Updated FeynML schema to reflect recent changes to FeynML module.

	* Added Gluino line class.

2007-05-16  Georg von Hippel <gmv22@cantab.net>

	* Added support for further styling (arrows, labels) to FeynML module.

	* Added leg sense (in/out, antiparticle) attribute to FeynML schema,
	and corresponding support to FeynML module.

	* Added FreeArrow and ParallelArrow classes for free-standing and
	line-parallel arrows in diagrams.

2007-05-15  Georg von Hippel <gmv22@cantab.net>

	* Improved FeynML writer so as to actually write to an XML file.

2007-05-13  Andy Buckley  <andy@insectnation.org>

	* paint.py: now colours, patterns and line thicknesses are defined here 
	as upper-case constants (via import from PyX). The import * has been removed. 
	The examples have been updated to match.

2007-05-02  Georg von Hippel <gmv22@cantab.net>

	* Added code to FeynML writer to combine dangling vertices and lines
	into external legs. Works only for diagrams where all internal
	vertices have been connected properly (unlike the Drell-Yan example)

2007-05-01  Georg von Hippel <gmv22@cantab.net>

	* Added support for free labels to FeynML module.

2007-05-01  Andy Buckley  <andy@insectnation.org>

	* Added 3D deformations to the SUSY and graviton lines. Again, they're
	time-consuming to render, but they look pretty.

	* Points are now drawn by definition after lines (well, there's a
	layer offset of 1000, which should be enough).

2007-04-26  Andy Buckley  <andy@insectnation.org>

	* Added silly example using multiple canvases and transparency.
